# bright

./: .editorconfig  .gitignore  .gitmodules  .luaurc  .styluaignore  CONTRIBUTING.md  Cargo.toml  README.md  bright.toml  mkdocs.yml  pesde.toml  rokit.toml  selene.toml  stylua.toml  typefuncs.yml
.github/workflows/: docs.yml  test.yml
docs/: badges.md  changelog.md  get-started.md  index.md
docs/api/: index.md
docs/api/std/: Config.md  NoConfig.md  _getTransformers.md  defineTransformer.md  registerTransformer.md
docs/developer-guide/: index.md
docs/developer-guide/bright/: index.md
docs/developer-guide/poke/: index.md  (+1 more)
docs/get-started/: index.md
docs/includes/: abbreviations.md  snippets.md
docs/layouts/: social_card.yml
docs/overrides/: home.html  main.html
docs/rules/: community.md  index.md
docs/stylesheets/: extra.css
docs/transformers/: community.md  index.md
docs/user-guide/: initializing-a-project.md
include/: bright.toml  license-header.txt
include/types/: ast.luau
lune/: actions.luau
lune/lib/: actions.luau  channel.luau  discover.luau  joinPath.luau  luau-unzip-LICENSE.md  reporter.luau
lune/tests/: init.luau  license.luau
patches/: 0x5eal+unzip-0.1.0+luau.patch  caveful_games+argparse-0.1.2+lune.patch
src/: config.rs  formatting.rs  lib.rs  main.rs  symbols.rs
src/cli/: init.rs  install.rs  mod.rs  run.rs  test.rs
src/lib/: init.luau  lib.luau  poke.luau  std.luau  types.luau
src/runtime/: mod.rs
test/: transformer.luau
tests/cases/: blank.luau.expected  jecs.txt
types/: lune.luau  std.luau  test.luau
(+8 files in other folders)
