[package]
name = "bright"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
colog = "1.3.0"
color-eyre = { version = "0.6.3", default-features = false }
directories = "5.0.1"
full_moon = "1.1.2"
include_dir = "0.7.4"
log = "0.4.22"
mlua = { version = "0.9.9", features = ["luau"] }
