[package]
name = "bright"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.23", features = ["cargo", "derive"] }
color-eyre = { version = "0.6.3", default-features = false }
directories = "5.0.1"
full_moon = "1.1.2"
include_dir = "0.7.4"
lazy_static = "1.5.0"
mlua = { version = "0.9.9", features = ["luau"] }
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
test-case = "3.3.1"
