[package]
name = "bright"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["cargo", "derive", "string"] }
console = "0.15.10"
directories = "5.0.1"
full_moon = { version = "1.1.2", features = ["luau"] }
include_dir = "0.7.4"
mlua = { version = "0.9.9", features = ["luau", "serialize"] }
notify = "7.0.0"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
walkdir = "2.5.0"

[dev-dependencies]
test-case = "3.3.1"
